--- a/1º Semester/Algorithms/List 5/Ex10.html
+++ b/1º Semester/Algorithms/List 5/Ex10.html
@@ -1,41 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercício 08</title>
+    <title>Exercício 10</title>
 </head>
 <body>
-    <label for="inputTickets">Insira quantas passagens você deseja adquirir: </label>
-    <input type="number" id="inputTickets"> <br>
-    <button onclick="Buy()">Comprar</button>
-    <div id="message"></div>
+    <label for="inputPassagens">Informe a quantidade de passagens que deseja adquirir:</label> <br>
+    <input type="number" id="inputPassagens"> <br><br>
+
+    <button onclick="Comprar()">Comprar</button> <br><br>
+    <div id="div_message"></div>
 
     <script>
-        function Buy() {
-            var tickets = Number(inputTickets.value)
-            var costPerTicket = Number(4.4)
-            var totalCost
+        function Comprar() {
+            var quantidade = Number(inputPassagens.value);
+            var valorPassagem = 4.40;
+            var totalAPagar = 0;
 
-            if (tickets >= 8 && tickets <= 50) {
-                if (tickets >= 8 && tickets <= 19) {
-                    totalCost = (costPerTicket * tickets) * 0.97
-                } else if (tickets >= 20 && tickets <= 40) {
-                    totalCost = (costPerTicket * tickets) * 0.95
-                } else {
-                    totalCost = 204.6
+            if (quantidade >= 8 && quantidade <= 50) {
+                if (quantidade >= 8 && quantidade <= 19) {
+                    totalAPagar = (quantidade * valorPassagem) * 0.97; 
+                } 
+                else if (quantidade >= 20 && quantidade <= 49) {
+                    totalAPagar = (quantidade * valorPassagem) * 0.95;
+                } 
+                else if (quantidade == 50) {
+                    totalAPagar = 204;
                 }
+                div_message.innerHTML = `Total a pagar: R$${totalAPagar.toFixed(2)}`;
             } else {
-                alert("Quantidade inválida para o Fidelidade")
-            }
-            if (minHeight > 1 && maxHeight > minHeight) {
-                if (height >= minHeight && height <= maxHeight) {
-                    message.innerHTML += `<br>O candidato ${name}, com altura de ${height} metros, participará do processo de seleção de piloto.`
-                } else {
-                    message.innerHTML += `<br>Infelizmente, o candidato ${name}, com altura de ${height} metros, não atende os requisitos da seleção`
-                }
-            } else {
-                alert("Intervalo da altura de seleção é inválida! A altura inicial deve ser maior que 1 e a altura final deve ser maior que a altura inicial")
+                alert("Quantidade inválida para o Fidelidade!");
+                div_message.innerHTML = ``;
             }
         }
     </script>
