--- a/1º Semester/Algorithms/List 5 - Logical Operators/Ex18.html
+++ b/1º Semester/Algorithms/List 5 - Logical Operators/Ex18.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercício 8 - Preferências de Augusto</title>
+    <title>Exercício 18</title>
 </head>
 <body>
     <label for="inputEmpresa">Nome da empresa:</label> <br>
