--- a/1º Semester/Algorithms/List 6 - String and Vectors Operations/Vectors/Ex5.html
+++ b/1º Semester/Algorithms/List 6 - String and Vectors Operations/Vectors/Ex5.html
@@ -1,26 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercício 5</title>
 </head>
 <body>
-    Insira o nome do filme:
-    <input type="text" id="input_movie">
-    <button onclick="Register()">Cadastrar Filme</button>
+    <p>Adicione seus filmes favoritos:</p>
+    <input type="text" id="input_movie" placeholder="Nome do filme">
+    <button onclick="RegisterFavoriteMovie()">Cadastrar Filme</button>
     <div id="message"></div>
 
     <script>
-        var movieList = []
+        var favoriteMovies = [];
 
-        function Register() {
-            var movie = input_movie.value
-                
-            movieList.push(movie)    
-            
-            message.innerHTML += `<br> Filme favorito: ${movieList.length}: ${movieList[movieList.length -1]} <br>`
+        function RegisterFavoriteMovie() {
+            favoriteMovies.push(input_movie.value);
+            input_movie.value = '';
 
+            updatePanel();
+        }
+
+        function updatePanel() {
+            var panelContent = '';
+            var total = favoriteMovies.length;
+
+            if (total >= 1) {
+                panelContent += 'Seu filme favorito: ' + favoriteMovies[0] + '<br>';
+            }
+
+            if (total >= 3) {
+                panelContent += 'Seu 3º filme favorito: ' + favoriteMovies[2] + '<br>';
+            } else {
+                panelContent += 'Seu 3º filme favorito: Ainda não existe<br>';
+            }
+
+            panelContent += 'Total de filmes cadastrados: ' + total;
+
+            message.innerHTML = panelContent;
         }
     </script>
 </body>
