--- a/1º Semester/Algorithms/LIst 7 - Looping/Ex9.html
+++ b/1º Semester/Algorithms/LIst 7 - Looping/Ex9.html
@@ -3,27 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercício 8</title>
+    <title>Exercício 9</title>
 </head>
 <body>
-    Insira um número (min: 20, max: 100):
+    Insira um número (min: 0, max: 200):
     <input type="number" id="input_number">
-    <button onclick="ShowMultiples()">Adoro Múltiplos de 5</button>
+    <button onclick="ShowMultiples()">Viva o 7!</button>
     <div id="message"></div>
 
     <script>
         function ShowMultiples() {
             var number = Number(input_number.value)
 
-            if (number < 20 || number > 100) {
-                message.innerHTML = `<span style="color: red">Número Inválido: o número precisa estar entre 20 e 100 </span>`
+            if (number < 0 || number > 200) {
+                message.innerHTML = `<span style="color: red">Número Inválido: o número precisa estar entre 0 e 200 </span>`
             } else {
                 var i = 0;
                 var messageText = "";
                 var multiple = 0;
                 
-                while (multiple+5 <= number) {
-                    multiple = 5*i
+                while (multiple+7 <= number) {
+                    multiple = 7*i
                     messageText += `${multiple} <br>`
                     i++
                 }
