Exercises and list added

--- a/1º Semester/Algorithms/Exercises/Uber Drive/index.html
+++ b/1º Semester/Algorithms/Exercises/Uber Drive/index.html
@@ -32,11 +32,11 @@
             valorCorrida += pedagio;
 
             if (bandeira == 1) {
-                valorCorrida *= 0.965; // Desconto 3,5%
+                valorCorrida *= 0.965;
             } else if (bandeira == 2) {
-                valorCorrida *= 1.117; // Acréscimo 11,7%
+                valorCorrida *= 1.117;
             } else if (bandeira == 3) {
-                valorCorrida *= 1.223; // Acréscimo 22,3%
+                valorCorrida *= 1.223;
             }
 
             contador++;
